# ChangeLog for dev-libs/libgamin
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgamin/ChangeLog,v 1.24 2009/09/25 10:51:18 flameeyes Exp $

  25 Sep 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  -files/gamin-0.1.9-freebsd.patch, libgamin-0.1.10-r1.ebuild,
  libgamin-0.1.10-r2.ebuild:
  Move the freebsd patch to the mirrors.

  30 Jun 2009; Jeroen Roovers <jer@gentoo.org> libgamin-0.1.10-r2.ebuild:
  Stable for HPPA too.

  28 Apr 2009; Raúl Porcel <armin76@gentoo.org> libgamin-0.1.10-r2.ebuild:
  m68k stable

  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org>
  libgamin-0.1.10-r2.ebuild:
  Stable on sparc, bug #260063

  30 Mar 2009; Raúl Porcel <armin76@gentoo.org> libgamin-0.1.10-r2.ebuild:
  arm/s390/sh/sparc stable

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org> libgamin-0.1.10-r2.ebuild:
  alpha/ia64 stable wrt #260063

  15 Mar 2009; Markus Meier <maekke@gentoo.org> libgamin-0.1.10-r2.ebuild:
  x86 stable, bug #260063

  11 Mar 2009; Daniel Gryniewicz <dang@gentoo.org>
  libgamin-0.1.10-r2.ebuild:
  Marked stable on amd64

  06 Mar 2009; Brent Baude <ranger@gentoo.org> libgamin-0.1.10-r2.ebuild:
  Marking libgamin-0.1.10-r2 ppc stable for bug 260063

  05 Mar 2009; Brent Baude <ranger@gentoo.org> libgamin-0.1.10-r2.ebuild:
  Marking libgamin-0.1.10-r2 ppc64 stable for bug 260063

*libgamin-0.1.10-r2 (15 Feb 2009)

  15 Feb 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +files/libgamin-0.1.10-compilewarnings.patch, +libgamin-0.1.10-r2.ebuild:
  Fix QA warnings: poor programming practices, bug #257281

  07 Feb 2009; Jeroen Roovers <jer@gentoo.org> libgamin-0.1.10-r1.ebuild:
  Stable for HPPA (bug #252350).

  06 Feb 2009; Raúl Porcel <armin76@gentoo.org> libgamin-0.1.10-r1.ebuild:
  arm/ia64/s390/sh stable wrt #252350

  04 Feb 2009; Christoph Mende <angelos@gentoo.org> metadata.xml:
  Changed gnome/kde/xfce to freedesktop

  31 Jan 2009; Gilles Dartiguelongue <eva@gentoo.org>