@@ -4,7 +4,6 @@ AUX libgamin-0.1.10-noinst-lib.patch 2207 RMD160 f0d2479f5aec3ef8852a36214c168ef
 AUX libgamin-0.1.10-opensolaris.patch 98939 RMD160 ccefc5b8c337ef4b73954be52ccfbfefb38f5f84 SHA1 90206d2eefad21bbdf2af74d2d906d2b957219cb SHA256 afd5f606b885c1a0a78750456bea6125a1dd2e33d11cd8cf618400059b95c361
 DIST gamin-0.1.10.tar.gz 653392 RMD160 fb6ba5ec2d2f49afacf10dda4095f02f5930d686 SHA1 f4c6b9fe87757552ef58fef4abef9e42cd3142ac SHA256 28085f0ae8be10eab582ff186af4fb0be92cc6c62b5cc19cd09b295c7c2899a1
 DIST gamin-0.1.9-freebsd.patch.bz2 4635 RMD160 9f53abfcb9e785e9408cb8f1d35ff36fb739d878 SHA1 3d276802bbab47885dfcba0bbe6422711c84e676 SHA256 fcd1a6655d1c7cd86db6102931a4da1c22bc85f1c4692959c1a966fec5231723
-EBUILD libgamin-0.1.10-r1.ebuild 2369 RMD160 4f49b7a715a05d7145fb13842c095e434b078295 SHA1 e278731578cb825b91297a45793e541478cc5be3 SHA256 c78d060eedfdb13e6c7378cc7b5f345c70a4644597e866f12d683f4e12351898
-EBUILD libgamin-0.1.10-r2.ebuild 2393 RMD160 ab551efbd0dc0a733b01cea48dc14ffe91eee9ec SHA1 c0b112baa6750c40ad4c2cb112e645710257a556 SHA256 d3dbd428f9efbab75735273d7e29b49106e065cad8c7c049d2d526e3e9f673fa
-MISC ChangeLog 3353 RMD160 96d81b92c008c2c2687b8f442c52de2bfbf4dbda SHA1 781953b97ae03ca5729b7557b762c25c69a1a8a2 SHA256 39447d4d2d4ca015b4b81c925307ccc4a2c6ea9f2d5c98d50012ae5debe0f069
+EBUILD libgamin-0.1.10-r2.ebuild 3250 RMD160 37b913ada10cd787005f935aa5eab2585449eaa2 SHA1 2b89dfa246498194a3f74fc2d7c818e2b362c079 SHA256 33d40c50bd893de84f8a0ab87466aadc87ccad8e2baf00f6ae389a5c86e57bce
+MISC ChangeLog 3603 RMD160 60e852119e4e442416cf465f94b3543478c6e3c2 SHA1 6aeea26314151c7851d0111500acf624b2bde24e SHA256 d48808b2de083f8291f3bcdbb6f24bfdc905d137732eb70f66fd3054c5ff7967
 MISC metadata.xml 234 RMD160 bd496dac30573bf707591b2b2ad497860e5aa029 SHA1 4641c1e70e35e944e7019aeae967deb1d2c28186 SHA256 3018e3b31ed690a57bfc14e35699dd20ea3b352fc28b918f699e6955b57a2d97
